major changes to lhelp - uses lnet now
 SVN 10021@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -23,17 +23,22 @@ components/chmhelp/democontrol/unit1.lfm svneol=native#text/plain
 components/chmhelp/democontrol/unit1.lrs svneol=native#text/plain
 components/chmhelp/democontrol/unit1.pas svneol=native#text/plain
 components/chmhelp/lhelp/back.xpm svneol=native#text/plain
+components/chmhelp/lhelp/basecontentprovider.pas svneol=native#text/plain
+components/chmhelp/lhelp/chmcontentprovider.pas svneol=native#text/plain
 components/chmhelp/lhelp/chmdataprovider.pas svneol=native#text/plain
 components/chmhelp/lhelp/chmpopup.lfm svneol=native#text/plain
 components/chmhelp/lhelp/chmpopup.lrs svneol=native#text/plain
 components/chmhelp/lhelp/chmpopup.pas svneol=native#text/plain
 components/chmhelp/lhelp/chmspecialparser.pas svneol=native#text/plain
+components/chmhelp/lhelp/filecontentprovider.pas svneol=native#text/plain
+components/chmhelp/lhelp/httpcontentprovider.pas svneol=native#text/plain
 components/chmhelp/lhelp/lhelp.lpi svneol=native#text/plain
 components/chmhelp/lhelp/lhelp.lpr svneol=native#text/plain
 components/chmhelp/lhelp/lhelpcontrol.pas svneol=native#text/plain
 components/chmhelp/lhelp/lhelpcore.lfm svneol=native#text/plain
 components/chmhelp/lhelp/lhelpcore.lrs svneol=native#text/plain
 components/chmhelp/lhelp/lhelpcore.pas svneol=native#text/plain
+components/chmhelp/lhelp/lnethttpdataprovider.pas svneol=native#text/plain
 components/chmhelp/packages/chm/chmbase.pas svneol=native#text/plain
 components/chmhelp/packages/chm/chmpkg.lpk svneol=native#text/plain
 components/chmhelp/packages/chm/chmpkg.pas svneol=native#text/plain
