--- a/.gitattributes
+++ b/.gitattributes
@@ -1031,6 +1031,8 @@ components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
 components/codetools/tests/pt_thlp1.pas svneol=native#text/plain
 components/codetools/tests/pt_thlp2.pas svneol=native#text/plain
+components/codetools/tests/refactoringtests.pas svneol=native#text/plain
+components/codetools/tests/rt_explodewith.pas svneol=native#text/plain
 components/codetools/tests/testcodetools.lpi svneol=native#text/plain
 components/codetools/tests/testcodetools.lpr svneol=native#text/plain
 components/codetools/unitdictionary.pas svneol=native#text/plain
