codetools: added tests unit order and namespaces
 SVN 50269@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1026,6 +1026,12 @@ components/codetools/tests/laztests/bug28876.pas svneol=native#text/plain
 components/codetools/tests/laztests/bug28877.pas svneol=native#text/plain
 components/codetools/tests/laztests/delphi_autodereference1.pas svneol=native#text/plain
 components/codetools/tests/laztests/tdefaultproperty1.pas svneol=native#text/plain
+components/codetools/tests/laztests/unit_order_a.pas svneol=native#text/plain
+components/codetools/tests/laztests/unit_order_b.pas svneol=native#text/plain
+components/codetools/tests/laztests/unit_order_test.pas svneol=native#text/plain
+components/codetools/tests/laztests/unitdots.dot.pas svneol=native#text/plain
+components/codetools/tests/laztests/unitdots.main.pas svneol=native#text/plain
+components/codetools/tests/laztests/unitdots.pas svneol=native#text/plain
 components/codetools/tests/parsertbase.pas svneol=native#text/plain
 components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
