IDE: renamed AdvancedIPC to LazAdvancedIPC to prevent file duplicate errors with FPC 3.1.1. Issue #28999. Patch by Do-wan Kim
 SVN 50318@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -5614,7 +5614,6 @@ ide/abstractsmethodsdlg.lfm svneol=native#text/plain
 ide/abstractsmethodsdlg.pas svneol=native#text/plain
 ide/addtoprojectdlg.lfm svneol=native#text/plain
 ide/addtoprojectdlg.pas svneol=native#text/pascal
-ide/advancedipc.pp svneol=native#text/pascal
 ide/advhistorylist.pas svneol=native#text/pascal
 ide/allcompileroptions.lfm svneol=native#text/plain
 ide/allcompileroptions.pas svneol=native#text/pascal
@@ -5921,6 +5920,7 @@ ide/keymapschemedlg.lfm svneol=native#text/plain
 ide/keymapschemedlg.pas svneol=native#text/pascal
 ide/keymapshortcutdlg.lfm svneol=native#text/plain
 ide/keymapshortcutdlg.pas svneol=native#text/plain
+ide/lazadvancedipc.pp svneol=native#text/pascal
 ide/lazarus.ico -text svneol=unset#image/ico
 ide/lazarus.lpi svneol=native#text/plain
 ide/lazarus.pp svneol=native#text/pascal
