Translations: Czech translation update by Chronos, bug 29007
 SVN 50346@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3276,6 +3276,7 @@ components/printers/design/Makefile svneol=native#text/plain
 components/printers/design/Makefile.compiled svneol=native#text/plain
 components/printers/design/Makefile.fpc svneol=native#text/plain
 components/printers/design/ideprinting.pas svneol=native#text/plain
+components/printers/design/languages/ideprinting.cs.po svneol=native#text/plain
 components/printers/design/languages/ideprinting.de.po svneol=native#text/plain
 components/printers/design/languages/ideprinting.es.po svneol=native#text/plain
 components/printers/design/languages/ideprinting.fi.po svneol=native#text/plain
@@ -3303,6 +3304,7 @@ components/printers/images/printersdlgs.txt svneol=native#text/plain
 components/printers/images/tpagesetupdialog.png -text svneol=unset#image/png
 components/printers/images/tprintdialog.png -text svneol=unset#image/png
 components/printers/images/tprintersetupdialog.png -text svneol=unset#image/png
+components/printers/languages/printer4lazstrconst.cs.po svneol=native#text/plain
 components/printers/languages/printer4lazstrconst.de.po svneol=native#text/plain
 components/printers/languages/printer4lazstrconst.po svneol=native#text/plain
 components/printers/languages/printer4lazstrconst.ru.po svneol=native#text/plain
