--- a/.gitattributes
+++ b/.gitattributes
@@ -7673,6 +7673,7 @@ packager/globallinks/designbaseclassdemopkg-0.lpl svneol=native#text/plain
 packager/globallinks/easydockmgr-1.lpl svneol=native#text/plain
 packager/globallinks/easydockmgrdsgn-0.lpl svneol=native#text/plain
 packager/globallinks/editormacroscript-0.lpl svneol=native#text/pascal
+packager/globallinks/editortoolbar-0.lpl svneol=native#text/plain
 packager/globallinks/educationlaz-1.0.1.lpl svneol=native#text/plain
 packager/globallinks/exploreidemenu-0.lpl svneol=native#text/plain
 packager/globallinks/externhelp-1.3.lpl svneol=native#text/plain
@@ -7713,6 +7714,7 @@ packager/globallinks/lazmrumenu-1.lpl svneol=native#text/plain
 packager/globallinks/lazopenglcontext-0.0.1.lpl svneol=native#text/plain
 packager/globallinks/lazparadox-0.lpl svneol=native#text/plain
 packager/globallinks/lazplotfunction-0.0.1.lpl svneol=native#text/plain
+packager/globallinks/lazprojectgroups-0.1.lpl svneol=native#text/plain
 packager/globallinks/lazreport-0.9.9.lpl svneol=native#text/plain
 packager/globallinks/lazreportpdfexport-0.8.lpl svneol=native#text/plain
 packager/globallinks/lazsvnpkg-0.0.1.lpl svneol=native#text/plain
@@ -7735,6 +7737,7 @@ packager/globallinks/lr_tdbf-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/lr_zeosdb-0.2.2.lpl svneol=native#text/plain
 packager/globallinks/lrcairoexport-0.9.lpl svneol=native#text/plain
 packager/globallinks/lremailexport-0.lpl svneol=native#text/plain
+packager/globallinks/lrspreadsheetexport-0.9.lpl svneol=native#text/plain
 packager/globallinks/macosfiles-0.lpl svneol=native#text/plain
 packager/globallinks/memdslaz-1.2.1.lpl svneol=native#text/plain
 packager/globallinks/messagecomposerpkg-0.lpl svneol=native#text/plain
@@ -7752,6 +7755,7 @@ packager/globallinks/rx-1.lpl svneol=native#text/plain
 packager/globallinks/sdflaz-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/semaphorgridlpk-1.0.1.lpl svneol=native#text/plain
 packager/globallinks/simpleideintf-0.lpl svneol=native#text/plain
+packager/globallinks/sparta_dockedformeditor-0.lpl svneol=native#text/plain
 packager/globallinks/sqldblaz-1.0.2.lpl svneol=native#text/plain
 packager/globallinks/sqlite3laz-0.4.lpl svneol=native#text/plain
 packager/globallinks/sqlitelaz-0.4.lpl svneol=native#text/plain
