packagetabs: Added packagetabs package.
 SVN 50494@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3196,6 +3196,9 @@ components/opengl/lazopenglcontext.pas svneol=native#text/plain
 components/opengl/openglcontext.pas svneol=native#text/plain
 components/opengl/openglcontext.res -text
 components/opengl/topenglcontrol.xpm svneol=native#text/plain
+components/packagetabs/packagetabs.lpk svneol=native#text/plain
+components/packagetabs/packagetabs.pas svneol=native#text/pascal
+components/packagetabs/packagetabs_impl.pas svneol=native#text/pascal
 components/paradox/README.txt svneol=native#text/plain
 components/paradox/demo/frmmain.lfm svneol=native#text/plain
 components/paradox/demo/frmmain.pp svneol=native#text/plain
@@ -7742,6 +7745,7 @@ packager/globallinks/memdslaz-1.2.1.lpl svneol=native#text/plain
 packager/globallinks/messagecomposerpkg-0.lpl svneol=native#text/plain
 packager/globallinks/multithreadprocslaz-1.2.1.lpl svneol=native#text/plain
 packager/globallinks/notlcldesigner-0.lpl svneol=native#text/plain
+packager/globallinks/packagetabs-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/pascalscript-0.0.0.1.lpl svneol=native#text/plain
 packager/globallinks/pascalscriptfcl-0.0.0.1.lpl svneol=native#text/plain
 packager/globallinks/pochecker-1.lpl svneol=native#text/plain
