packagetabs: added README file
 SVN 50503@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3197,6 +3197,7 @@ components/opengl/lazopenglcontext.pas svneol=native#text/plain
 components/opengl/openglcontext.pas svneol=native#text/plain
 components/opengl/openglcontext.res -text
 components/opengl/topenglcontrol.xpm svneol=native#text/plain
+components/packagetabs/README.txt svneol=native#text/plain
 components/packagetabs/packagetabs.lpk svneol=native#text/plain
 components/packagetabs/packagetabs.pas svneol=native#text/pascal
 components/packagetabs/packagetabs_impl.pas svneol=native#text/pascal
