favorites: new Favorites IDE extension package
 SVN 50512@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1290,6 +1290,10 @@ components/externhelp/languages/externhelpfrm.po svneol=native#text/plain
 components/externhelp/languages/externhelpfrm.pt_BR.po svneol=native#text/plain
 components/externhelp/languages/externhelpfrm.ru.po svneol=native#text/plain
 components/externhelp/languages/externhelpfrm.uk.po svneol=native#text/plain
+components/favorites/README.txt svneol=native#text/plain
+components/favorites/favorites.lpk svneol=native#text/plain
+components/favorites/favorites.pas svneol=native#text/pascal
+components/favorites/favorites_impl.pas svneol=native#text/pascal
 components/filebrowser/frmconfigfilebrowser.lfm svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.pp svneol=native#text/plain
 components/filebrowser/frmfilebrowser.lfm svneol=native#text/plain
@@ -7681,6 +7685,7 @@ packager/globallinks/editormacroscript-0.lpl svneol=native#text/pascal
 packager/globallinks/educationlaz-1.0.1.lpl svneol=native#text/plain
 packager/globallinks/exploreidemenu-0.lpl svneol=native#text/plain
 packager/globallinks/externhelp-1.3.lpl svneol=native#text/plain
+packager/globallinks/favorites-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/fcl-1.0.1.lpl svneol=native#text/plain
 packager/globallinks/filefindlaz-1.0.2.lpl svneol=native#text/plain
 packager/globallinks/fpcunitconsolerunner-1.lpl svneol=native#text/plain
