set fixes version to 1.6RC1
 SVN 50541@branches/fixes_1_6

--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -23,7 +23,8 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
-      <MinorVersionNr Value="5"/>
+      <MinorVersionNr Value="6"/>
+      <BuildNr Value="1"/>
       <CharSet Value="04B0"/>
       <StringTable ProductName="Lazarus IDE" ProductVersion=""/>
     </VersionInfo>
