--- a/.gitattributes
+++ b/.gitattributes
@@ -1295,6 +1295,7 @@ components/favorites/favorites.lpk svneol=native#text/plain
 components/favorites/favorites.pas svneol=native#text/pascal
 components/favorites/favorites_impl.pas svneol=native#text/pascal
 components/favorites/favoritesstr.pas svneol=native#text/pascal
+components/favorites/languages/favoritesstr.de.po svneol=native#text/plain
 components/favorites/languages/favoritesstr.hu.po svneol=native#text/plain
 components/favorites/languages/favoritesstr.po svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lfm svneol=native#text/plain
