synchronized with trunk till r50735
 SVN 50737@branches/free-sparta

--- a/.gitattributes
+++ b/.gitattributes
@@ -3559,6 +3559,20 @@ components/simpleideintf/examples/testh2pastool.lpr svneol=native#text/plain
 components/simpleideintf/simpleide.pas svneol=native#text/plain
 components/simpleideintf/simpleideintf.lpk svneol=native#text/plain
 components/simpleideintf/simpleideintf.pas svneol=native#text/plain
+components/sparta/dockedformeditor/source/sparta_designedform.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_fakecustom.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_fakeform.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_fakeframe.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_fakenoncontrol.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_hashutils.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_mainide.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_reg_dockedformeditor.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_resizer.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/sparta_resizerframe.lfm svneol=native#text/plain
+components/sparta/dockedformeditor/source/sparta_resizerframe.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/source/spartaapi.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/sparta_dockedformeditor.lpk svneol=native#text/plain
+components/sparta/dockedformeditor/sparta_dockedformeditor.pas svneol=native#text/pascal
 components/sqldb/Makefile svneol=native#text/plain
 components/sqldb/Makefile.compiled svneol=native#text/plain
 components/sqldb/Makefile.fpc svneol=native#text/plain
