--- a/.gitattributes
+++ b/.gitattributes
@@ -4090,6 +4090,18 @@ components/tachart/icons/tintervalchartsource.png -text svneol=unset#images/png
 components/tachart/icons/tlistchartsource.png -text svneol=unset#images/png
 components/tachart/icons/trandomchartsource.png -text svneol=unset#images/png
 components/tachart/icons/tuserdefinedchartsource.png -text svneol=unset#images/png
+components/tachart/languages/tachartutils.de.po svneol=native#text/plain
+components/tachart/languages/tachartutils.po svneol=native#text/plain
+components/tachart/languages/tadatapointseditor.de.po svneol=native#text/plain
+components/tachart/languages/tadatapointseditor.po svneol=native#text/plain
+components/tachart/languages/taserieseditor.de.po svneol=native#text/plain
+components/tachart/languages/taserieseditor.po svneol=native#text/plain
+components/tachart/languages/tasubcomponentseditor.de.po svneol=native#text/plain
+components/tachart/languages/tasubcomponentseditor.po svneol=native#text/plain
+components/tachart/languages/tatooleditors.de.po svneol=native#text/plain
+components/tachart/languages/tatooleditors.po svneol=native#text/plain
+components/tachart/languages/tatransformations.de.po svneol=native#text/plain
+components/tachart/languages/tatransformations.po svneol=native#text/plain
 components/tachart/numlib_fix/direct.inc svneol=native#text/pascal
 components/tachart/numlib_fix/ipf.pas svneol=native#text/pascal
 components/tachart/numlib_fix/mdt.pas svneol=native#text/pascal
