TAChart: Combine all po files in a single file (TAChartStrConsts)
 SVN 50756@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4093,18 +4093,8 @@ components/tachart/icons/tintervalchartsource.png -text svneol=unset#images/png
 components/tachart/icons/tlistchartsource.png -text svneol=unset#images/png
 components/tachart/icons/trandomchartsource.png -text svneol=unset#images/png
 components/tachart/icons/tuserdefinedchartsource.png -text svneol=unset#images/png
-components/tachart/languages/tachartutils.de.po svneol=native#text/plain
-components/tachart/languages/tachartutils.po svneol=native#text/plain
-components/tachart/languages/tadatapointseditor.de.po svneol=native#text/plain
-components/tachart/languages/tadatapointseditor.po svneol=native#text/plain
-components/tachart/languages/taserieseditor.de.po svneol=native#text/plain
-components/tachart/languages/taserieseditor.po svneol=native#text/plain
-components/tachart/languages/tasubcomponentseditor.de.po svneol=native#text/plain
-components/tachart/languages/tasubcomponentseditor.po svneol=native#text/plain
-components/tachart/languages/tatooleditors.de.po svneol=native#text/plain
-components/tachart/languages/tatooleditors.po svneol=native#text/plain
-components/tachart/languages/tatransformations.de.po svneol=native#text/plain
-components/tachart/languages/tatransformations.po svneol=native#text/plain
+components/tachart/languages/tachartstrconsts.de.po svneol=native#text/plain
+components/tachart/languages/tachartstrconsts.po svneol=native#text/plain
 components/tachart/numlib_fix/direct.inc svneol=native#text/pascal
 components/tachart/numlib_fix/ipf.pas svneol=native#text/pascal
 components/tachart/numlib_fix/mdt.pas svneol=native#text/pascal
@@ -4126,6 +4116,7 @@ components/tachart/tachartlazaruspkg.pas svneol=native#text/plain
 components/tachart/tachartlistbox.pas svneol=native#text/pascal
 components/tachart/tachartprint.lpk svneol=native#text/plain
 components/tachart/tachartprint.pas svneol=native#text/pascal
+components/tachart/tachartstrconsts.pas svneol=native#text/plain
 components/tachart/tachartteechart.pas svneol=native#text/pascal
 components/tachart/tachartutils.pas svneol=native#text/plain
 components/tachart/tachartwmf.lpk svneol=native#text/plain
