--- a/.gitignore
+++ b/.gitignore
@@ -261,6 +261,18 @@ components/tachart/demo/wmf/*.res
 components/tachart/demo/wmf/*.wmf
 components/tachart/demo/wmf/lib
 components/tachart/fpdoc/html/*
+components/tachart/languages/tachartutils.de.po
+components/tachart/languages/tachartutils.po
+components/tachart/languages/tadatapointseditor.de.po
+components/tachart/languages/tadatapointseditor.po
+components/tachart/languages/taserieseditor.de.po
+components/tachart/languages/taserieseditor.po
+components/tachart/languages/tasubcomponentseditor.de.po
+components/tachart/languages/tasubcomponentseditor.po
+components/tachart/languages/tatooleditors.de.po
+components/tachart/languages/tatooleditors.po
+components/tachart/languages/tatransformations.de.po
+components/tachart/languages/tatransformations.po
 components/tachart/lib
 components/tachart/test/*.exe
 components/tachart/test/*.lps
