--- a/.gitattributes
+++ b/.gitattributes
@@ -4095,6 +4095,7 @@ components/tachart/icons/trandomchartsource.png -text svneol=unset#images/png
 components/tachart/icons/tuserdefinedchartsource.png -text svneol=unset#images/png
 components/tachart/languages/tachartstrconsts.de.po svneol=native#text/plain
 components/tachart/languages/tachartstrconsts.po svneol=native#text/plain
+components/tachart/languages/tachartstrconsts.se.po svneol=native#text/plain
 components/tachart/numlib_fix/direct.inc svneol=native#text/pascal
 components/tachart/numlib_fix/ipf.pas svneol=native#text/pascal
 components/tachart/numlib_fix/mdt.pas svneol=native#text/pascal
