PackageTabs: added Russian translation
 SVN 50781@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3206,6 +3206,7 @@ components/opengl/topenglcontrol.xpm svneol=native#text/plain
 components/packagetabs/README.txt svneol=native#text/plain
 components/packagetabs/languages/packagetabsstr.hu.po svneol=native#text/plain
 components/packagetabs/languages/packagetabsstr.po svneol=native#text/plain
+components/packagetabs/languages/packagetabsstr.ru.po svneol=native#text/plain
 components/packagetabs/packagetabs.lpk svneol=native#text/plain
 components/packagetabs/packagetabs.pas svneol=native#text/pascal
 components/packagetabs/packagetabs_impl.pas svneol=native#text/pascal
