--- a/.gitattributes
+++ b/.gitattributes
@@ -1805,6 +1805,7 @@ components/h2pas/idetextconvlistedit.pas svneol=native#text/plain
 components/h2pas/languages/h2passtrconsts.cs.po svneol=native#text/plain
 components/h2pas/languages/h2passtrconsts.de.po svneol=native#text/plain
 components/h2pas/languages/h2passtrconsts.es.po svneol=native#text/plain
+components/h2pas/languages/h2passtrconsts.fr.po svneol=native#text/plain
 components/h2pas/languages/h2passtrconsts.hu.po svneol=native#text/plain
 components/h2pas/languages/h2passtrconsts.id.po svneol=native#text/plain
 components/h2pas/languages/h2passtrconsts.it.po svneol=native#text/plain
