* Rework query panel and data panel so they are frames
 SVN 51167@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -8860,10 +8860,13 @@ tools/lazdatadesktop/bitmaps/qrybtn_previous.xpm svneol=native#text/plain
 tools/lazdatadesktop/bitmaps/qrybtn_save.xpm svneol=native#text/plain
 tools/lazdatadesktop/bitmaps/querypanel.txt svneol=native#text/plain
 tools/lazdatadesktop/conneditor.pp svneol=native#text/plain
-tools/lazdatadesktop/datapanel.pp svneol=native#text/plain
 tools/lazdatadesktop/ddfiles.pp svneol=native#text/plain
 tools/lazdatadesktop/dicteditor.pp svneol=native#text/plain
 tools/lazdatadesktop/dicteditor.res -text
+tools/lazdatadesktop/fradata.lfm svneol=native#text/plain
+tools/lazdatadesktop/fradata.pp svneol=native#text/plain
+tools/lazdatadesktop/fraquery.lfm svneol=native#text/plain
+tools/lazdatadesktop/fraquery.pp svneol=native#text/plain
 tools/lazdatadesktop/frmgeneratesql.lfm svneol=native#text/plain
 tools/lazdatadesktop/frmgeneratesql.pp svneol=native#text/plain
 tools/lazdatadesktop/frmimportdd.lfm svneol=native#text/plain
@@ -8889,7 +8892,6 @@ tools/lazdatadesktop/lazdatadeskstr.pas svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpi svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpr svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.res -text
-tools/lazdatadesktop/querypanel.pp svneol=native#text/plain
 tools/lazdatadesktop/querypanel.res -text
 tools/lazres.lpi svneol=native#text/plain
 tools/lazres.pp svneol=native#text/pascal
