sparta: localization support, patch from Péter Gábor #29257
 SVN 51205@branches/free-sparta

--- a/.gitattributes
+++ b/.gitattributes
@@ -3550,6 +3550,8 @@ components/simpleideintf/examples/testh2pastool.lpr svneol=native#text/plain
 components/simpleideintf/simpleide.pas svneol=native#text/plain
 components/simpleideintf/simpleideintf.lpk svneol=native#text/plain
 components/simpleideintf/simpleideintf.pas svneol=native#text/plain
+components/sparta/dockedformeditor/language/sparta_strconsts.hu.po svneol=native#text/plain
+components/sparta/dockedformeditor/language/sparta_strconsts.po svneol=native#text/plain
 components/sparta/dockedformeditor/source/sparta_designedform.pas svneol=native#text/pascal
 components/sparta/dockedformeditor/source/sparta_fakecustom.pas svneol=native#text/pascal
 components/sparta/dockedformeditor/source/sparta_fakeform.pas svneol=native#text/pascal
@@ -3564,6 +3566,7 @@ components/sparta/dockedformeditor/source/sparta_resizerframe.pas svneol=native#
 components/sparta/dockedformeditor/source/spartaapi.pas svneol=native#text/pascal
 components/sparta/dockedformeditor/sparta_dockedformeditor.lpk svneol=native#text/plain
 components/sparta/dockedformeditor/sparta_dockedformeditor.pas svneol=native#text/pascal
+components/sparta/dockedformeditor/sparta_strconsts.pas svneol=native#text/pascal
 components/sqldb/Makefile svneol=native#text/plain
 components/sqldb/Makefile.compiled svneol=native#text/plain
 components/sqldb/Makefile.fpc svneol=native#text/plain
