--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,8 @@ components/simpleideintf/examples/files/*.bak
 components/simpleideintf/examples/files/units
 components/simpleideintf/examples/units
 components/simpleideintf/units
+components/sparta/dockedformeditor/language/*.bak
+components/sparta/dockedformeditor/language/units
 components/sqldb/*.bak
 components/sqldb/lib/*.bak
 components/sqldb/lib/units
