* Getsources for windows by Mario Bonati
 SVN 51209@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1669,6 +1669,7 @@ components/fpweb/lazwebextra.lpk svneol=native#text/plain
 components/fpweb/weblaz.lpk svneol=native#text/plain
 components/fpweb/weblaz.pas svneol=native#text/plain
 components/fpweb/weblazideintf.pp svneol=native#text/plain
+components/googleapis/2_6_4/getsources.bat svneol=native#text/plain
 components/googleapis/2_6_4/getsources.sh svneol=native#text/plain
 components/googleapis/2_6_4/synapsewebclient.pp svneol=native#text/plain
 components/googleapis/README.txt svneol=native#text/plain
