Translations: French translation update by Gilles Vasseur, bug 29354
 SVN 51224@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -3551,6 +3551,7 @@ components/simpleideintf/examples/testh2pastool.lpr svneol=native#text/plain
 components/simpleideintf/simpleide.pas svneol=native#text/plain
 components/simpleideintf/simpleideintf.lpk svneol=native#text/plain
 components/simpleideintf/simpleideintf.pas svneol=native#text/plain
+components/sparta/dockedformeditor/language/sparta_strconsts.fr.po svneol=native#text/plain
 components/sparta/dockedformeditor/language/sparta_strconsts.hu.po svneol=native#text/plain
 components/sparta/dockedformeditor/language/sparta_strconsts.po svneol=native#text/plain
 components/sparta/dockedformeditor/language/sparta_strconsts.ru.po svneol=native#text/plain
