Turbopower_ipro: New files for Iphttpbroker and its example from Silvio Clécio. Issue #29483.
 SVN 51387@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4269,6 +4269,10 @@ components/turbopower_ipro/design/Makefile.fpc svneol=native#text/plain
 components/turbopower_ipro/design/ipidehtmlcontrol.pas svneol=native#text/plain
 components/turbopower_ipro/design/turbopoweriprodsgn.lpk svneol=native#text/plain
 components/turbopower_ipro/design/turbopoweriprodsgn.pas svneol=native#text/plain
+components/turbopower_ipro/examples/browser.lpi svneol=native#text/plain
+components/turbopower_ipro/examples/browser.lpr svneol=native#text/pascal
+components/turbopower_ipro/examples/browserfrm.lfm svneol=native#text/plain
+components/turbopower_ipro/examples/browserfrm.pas svneol=native#text/pascal
 components/turbopower_ipro/examples/defaultimage.res -text
 components/turbopower_ipro/examples/defaultimage.xpm -text svneol=unset#image/pixmap
 components/turbopower_ipro/examples/fpdoc.css svneol=native#text/plain
@@ -4303,6 +4307,7 @@ components/turbopower_ipro/iphtmlpv.lfm svneol=native#text/plain
 components/turbopower_ipro/iphtmlpv.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmltablelayout.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmltablist.pas svneol=native#text/plain
+components/turbopower_ipro/iphttpbroker.pas svneol=native#text/pascal
 components/turbopower_ipro/ipmsg.pas svneol=native#text/pascal
 components/turbopower_ipro/ipstrms.pas svneol=native#text/pascal
 components/turbopower_ipro/iputils.pas svneol=native#text/pascal
@@ -4339,6 +4344,7 @@ components/turbopower_ipro/languages/iputils.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.zh_CN.po svneol=native#text/plain
 components/turbopower_ipro/tipfiledataprovider.png -text svneol=unset#image/png
 components/turbopower_ipro/tiphtmlpanel.png -text svneol=unset#image/png
+components/turbopower_ipro/tiphttpdataprovider.png -text svneol=unset#image/png
 components/turbopower_ipro/turbopoweripro.lpk svneol=native#text/pascal
 components/turbopower_ipro/turbopoweripro.pas svneol=native#text/plain
 components/vlc/README.txt svneol=native#text/plain
