--- a/.gitattributes
+++ b/.gitattributes
@@ -3574,6 +3574,17 @@ components/sparta/dockedformeditor/source/spartaapi.pas svneol=native#text/pasca
 components/sparta/dockedformeditor/sparta_dockedformeditor.lpk svneol=native#text/plain
 components/sparta/dockedformeditor/sparta_dockedformeditor.pas svneol=native#text/pascal
 components/sparta/dockedformeditor/sparta_strconsts.pas svneol=native#text/pascal
+components/sparta/smartformeditor/source/sparta.res -text
+components/sparta/smartformeditor/source/sparta_componentpalette.pas svneol=native#text/pascal
+components/sparta/smartformeditor/source/sparta_edtu_main.lfm svneol=native#text/plain
+components/sparta/smartformeditor/source/sparta_edtu_main.pas svneol=native#text/pascal
+components/sparta/smartformeditor/source/sparta_fakeformbackground.lfm svneol=native#text/plain
+components/sparta/smartformeditor/source/sparta_fakeformbackground.pas svneol=native#text/pascal
+components/sparta/smartformeditor/source/sparta_fakeformbackground.res -text
+components/sparta/smartformeditor/source/sparta_fakeformbg.pas svneol=native#text/pascal
+components/sparta/smartformeditor/source/sparta_reg_smartformeditor.pas svneol=native#text/pascal
+components/sparta/smartformeditor/sparta_smartformeditor.lpk svneol=native#text/plain
+components/sparta/smartformeditor/sparta_smartformeditor.pas svneol=native#text/pascal
 components/sqldb/Makefile svneol=native#text/plain
 components/sqldb/Makefile.compiled svneol=native#text/plain
 components/sqldb/Makefile.fpc svneol=native#text/plain
