--- a/.gitattributes
+++ b/.gitattributes
@@ -4290,6 +4290,11 @@ components/turbopower_ipro/examples/htmlwithcssfrm.lfm svneol=native#text/plain
 components/turbopower_ipro/examples/htmlwithcssfrm.pas svneol=native#text/plain
 components/turbopower_ipro/examples/index.html svneol=native#text/plain
 components/turbopower_ipro/examples/simplepage2.html svneol=native#text/plain
+components/turbopower_ipro/examples/sum.html svneol=native#text/plain
+components/turbopower_ipro/examples/sumab.lpi svneol=native#text/plain
+components/turbopower_ipro/examples/sumab.lpr svneol=native#text/pascal
+components/turbopower_ipro/examples/sumabfrm.lfm svneol=native#text/plain
+components/turbopower_ipro/examples/sumabfrm.pas svneol=native#text/pascal
 components/turbopower_ipro/for_delphi/ipHtml.dcr -text
 components/turbopower_ipro/for_delphi/iphtml.res -text
 components/turbopower_ipro/ipanim.pas svneol=native#text/pascal
