--- a/.gitattributes
+++ b/.gitattributes
@@ -4297,6 +4297,7 @@ components/turbopower_ipro/examples/sumabfrm.lfm svneol=native#text/plain
 components/turbopower_ipro/examples/sumabfrm.pas svneol=native#text/pascal
 components/turbopower_ipro/for_delphi/ipHtml.dcr -text
 components/turbopower_ipro/for_delphi/iphtml.res -text
+components/turbopower_ipro/icons_list.txt svneol=native#text/plain
 components/turbopower_ipro/ipanim.pas svneol=native#text/pascal
 components/turbopower_ipro/ipconst.pas svneol=native#text/pascal
 components/turbopower_ipro/ipcss.inc svneol=native#text/pascal
@@ -4347,6 +4348,7 @@ components/turbopower_ipro/languages/iputils.pt_BR.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.ru.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.uk.po svneol=native#text/plain
 components/turbopower_ipro/languages/iputils.zh_CN.po svneol=native#text/plain
+components/turbopower_ipro/make_icons.bat svneol=native#text/plain
 components/turbopower_ipro/tipfiledataprovider.png -text svneol=unset#image/png
 components/turbopower_ipro/tiphtmlpanel.png -text svneol=unset#image/png
 components/turbopower_ipro/tiphttpdataprovider.png -text svneol=unset#image/png
