--- a/.gitattributes
+++ b/.gitattributes
@@ -3602,11 +3602,14 @@ components/sparta/generics/source/inc/generics.dictionaries.inc svneol=native#te
 components/sparta/generics/source/inc/generics.dictionariesh.inc svneol=native#text/plain
 components/sparta/generics/sparta_generics.lpk svneol=native#text/plain
 components/sparta/generics/sparta_generics.pas svneol=native#text/pascal
+components/sparta/mdi/source/sparta_basicfakecustom.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_basicresizeframe.lfm svneol=native#text/plain
 components/sparta/mdi/source/sparta_basicresizeframe.pas svneol=native#text/pascal
+components/sparta/mdi/source/sparta_basicresizer.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_interfacesmdi.pas svneol=native#text/pascal
 components/sparta/mdi/sparta_mdi.lpk svneol=native#text/plain
 components/sparta/mdi/sparta_mdi.pas svneol=native#text/pascal
+components/sparta/mdi/sparta_mdi_strconsts.pas svneol=native#text/pascal
 components/sparta/smartformeditor/source/sparta.res -text
 components/sparta/smartformeditor/source/sparta_componentpalette.pas svneol=native#text/pascal
 components/sparta/smartformeditor/source/sparta_edtu_main.lfm svneol=native#text/plain
