sparta: -MDI form container "TFormContainer" -New IResizeFrame interface to handle MDI form moving -New frame TfrFormBackgroundForMDI
 SVN 51473@branches/free-sparta

--- a/.gitattributes
+++ b/.gitattributes
@@ -3606,6 +3606,8 @@ components/sparta/mdi/source/sparta_basicfakecustom.pas svneol=native#text/pasca
 components/sparta/mdi/source/sparta_basicresizeframe.lfm svneol=native#text/plain
 components/sparta/mdi/source/sparta_basicresizeframe.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_basicresizer.pas svneol=native#text/pascal
+components/sparta/mdi/source/sparta_formbackgroundformdi.lfm svneol=native#text/pascal
+components/sparta/mdi/source/sparta_formbackgroundformdi.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_interfacesmdi.pas svneol=native#text/pascal
 components/sparta/mdi/sparta_mdi.lpk svneol=native#text/plain
 components/sparta/mdi/sparta_mdi.pas svneol=native#text/pascal
