sparta: sparta_MDI package modifications: -new class TMultiplyResizer to menage MDI desktop -more generic resizer: TAbstractResizer. Base for IDE resizer and TMultiplyResizer -more advanced IResizeFrame interface
 SVN 51477@branches/free-sparta

--- a/.gitattributes
+++ b/.gitattributes
@@ -3602,6 +3602,7 @@ components/sparta/generics/source/inc/generics.dictionaries.inc svneol=native#te
 components/sparta/generics/source/inc/generics.dictionariesh.inc svneol=native#text/plain
 components/sparta/generics/sparta_generics.lpk svneol=native#text/plain
 components/sparta/generics/sparta_generics.pas svneol=native#text/pascal
+components/sparta/mdi/source/sparta_abstractresizer.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_basicfakecustom.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_basicresizeframe.lfm svneol=native#text/plain
 components/sparta/mdi/source/sparta_basicresizeframe.pas svneol=native#text/pascal
@@ -3609,6 +3610,7 @@ components/sparta/mdi/source/sparta_basicresizer.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_formbackgroundformdi.lfm svneol=native#text/pascal
 components/sparta/mdi/source/sparta_formbackgroundformdi.pas svneol=native#text/pascal
 components/sparta/mdi/source/sparta_interfacesmdi.pas svneol=native#text/pascal
+components/sparta/mdi/source/sparta_multiplyresizer.pas svneol=native#text/pascal
 components/sparta/mdi/sparta_mdi.lpk svneol=native#text/plain
 components/sparta/mdi/sparta_mdi.pas svneol=native#text/pascal
 components/sparta/mdi/sparta_mdi_strconsts.pas svneol=native#text/pascal
