New files refactored out from MenuShadows.
 SVN 51541@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4543,10 +4543,12 @@ designer/designermenu.pp svneol=native#text/pascal
 designer/designerprocs.pas svneol=native#text/pascal
 designer/framedesigner.pas svneol=native#text/pascal
 designer/jitforms.pp svneol=native#text/pascal
+designer/menudesignerbase.pas svneol=native#text/pascal
 designer/menueditorform.lfm svneol=native#text/pascal
 designer/menueditorform.pas svneol=native#text/pascal
 designer/menushadows.pp svneol=native#text/pascal
 designer/menushortcuts.pas svneol=native#text/pascal
+designer/menutemplates.pas svneol=native#text/pascal
 designer/noncontroldesigner.pas svneol=native#text/pascal
 designer/objinspext.pas svneol=native#text/pascal
 designer/scalecompsdlg.lfm svneol=native#text/plain
