New files refactored from MenuShadows.
 SVN 51614@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4546,7 +4546,9 @@ designer/jitforms.pp svneol=native#text/pascal
 designer/menudesignerbase.pas svneol=native#text/pascal
 designer/menueditorform.lfm svneol=native#text/pascal
 designer/menueditorform.pas svneol=native#text/pascal
+designer/menuresolveconflicts.pas svneol=native#text/pascal
 designer/menushadows.pp svneol=native#text/pascal
+designer/menushortcutdisplay.pas svneol=native#text/pascal
 designer/menushortcuts.pas svneol=native#text/pascal
 designer/menutemplates.pas svneol=native#text/pascal
 designer/noncontroldesigner.pas svneol=native#text/pascal
