--- a/.gitattributes
+++ b/.gitattributes
@@ -4542,10 +4542,10 @@ designer/designerprocs.pas svneol=native#text/pascal
 designer/framedesigner.pas svneol=native#text/pascal
 designer/jitforms.pp svneol=native#text/pascal
 designer/menudesignerbase.pas svneol=native#text/pascal
+designer/menueditor.pp svneol=native#text/pascal
 designer/menueditorform.lfm svneol=native#text/pascal
 designer/menueditorform.pas svneol=native#text/pascal
 designer/menuresolveconflicts.pas svneol=native#text/pascal
-designer/menushadows.pp svneol=native#text/pascal
 designer/menushortcutdisplay.pas svneol=native#text/pascal
 designer/menushortcuts.pas svneol=native#text/pascal
 designer/menutemplates.pas svneol=native#text/pascal
