--- a/lazarus.app/Contents/Info.plist
+++ b/lazarus.app/Contents/Info.plist
@@ -148,7 +148,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>Lazarus IDE v1.6RC3</string>
+	<string>Lazarus IDE v1.6</string>
 	<key>CFBundleSignature</key>
 	<string>laza</string>
 	<key>CFBundleVersion</key>
