--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -24,9 +24,8 @@
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="6"/>
-      <BuildNr Value="2"/>
+      <RevisionNr Value="1"/>
       <CharSet Value="04B0"/>
-      <Attributes pvaPreRelease="True"/>
       <StringTable ProductName="Lazarus IDE" ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
